[package]
name = "miscreant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
gix-hash = { version = "0.25.1", features = ["sha1", "sha256"] }
gix-object = { version = "0.62.0", features = ["sha1", "sha256"] }
gix-packetline-blocking = "0.19.3"
slatedb = { version = "0.14.1", features = ["aws"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5"

[dev-dependencies]
reqwest = "0.13.4"
tempfile = "3.27.0"
