[package]
name = "miscreant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = "0.8.9"
bytes = "1.12.0"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "env"] }
foyer = { version = "0.22.3", features = ["serde"] }
futures = "0.3"
log = "0.4"
lru = "0.18.0"
gix-features = { version = "0.48.1", features = ["progress", "zlib"] }
gix-hash = { version = "0.25.1", features = ["sha1", "sha256"] }
gix-object = { version = "0.62.0", features = ["sha1", "sha256"] }
gix-pack = { version = "0.72.0", default-features = false, features = [
    "streaming-input",
    "parallel",
    "generate",
    "sha1",
    "sha256",
] }
gix-packetline-blocking = "0.19.3"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
object_store = "0.14.0"
parking_lot = "0.12.5"
rand = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
slatedb = { version = "0.14.1", features = ["aws"] }
slatedb-common = "0.14.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower-http = { version = "0.6.11", features = ["decompression-gzip"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5"
walkdir = "2.5.0"
zlib-rs = "0.6.5"

[dev-dependencies]
flate2 = "1"
reqwest = "0.13.4"
